--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 </head>
 
 <body>
-<div>
-  <h1 class="main-title">안녕하세요!</h1>
+<div class="box">
+  <h1 class="main-title">james의 페이지에 오신걸 환영합니다!</h1>
+  <h4>abcdefghijklmnopqrstuvwxyz</h4>
 </div>
+
+<div class="box">
+  <h2 class="main-subject">반갑습니다!</h2>
+</div>
+
+
 <button id="bt">button</button>
 
 </body>
