--- a/index.html
+++ b/index.html
@@ -13,19 +13,41 @@
 <body>
 <div class="box">
   <h1 class="main-title">james의 페이지에 오신걸 환영합니다!</h1>
-  <h4>abcdefghijklmnopqrstuvwxyz</h4>
+  <h4>ddabcdefghijklmnopqrstuvwxyz</h4>
 </div>
 
-<div class="box">
-  <h2 class="main-subject">반갑습니다!</h2>
+<div class="box2">
+  <div class="section">
+    <h3 class="main-subject">학력</h3>
+    <p class="content">안말초등학교 졸업</p>
+    <p class="content">송림중학교 졸업</p>
+    <p class="content">송림고등학교 졸업</p>
+    <p class="content">고려대학교 재학</p>
+  </div>
+  
+  <div class="section">
+    <h3 class="main-subject">수상</h3>
+    <p class="content">문무태권도 바른어린이상</p>
+    <p class="content">물로켓 멀리쏘기 최우수상</p>
+    <p class="content">3학년 3반 병두껑 멀리 날리기 대표 학생</p>
+  </div>
+</div>
+
+<div class='box'>
+  <h3 class="sub-subject">
+    <p>email</p>
+    <p>phone</p>
+  </h3>
 </div>
 
 
-<button id="bt">button</button>
+
+
+<button class="btn">button</button>
 
 </body>
 <script>
-  $('#bt').on('click', function() {
+  $('.btn').on('click', function() {
   alert()
   })
 </script>
