--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
 
 <!-- 간단 곱셈 계산기 -->
 <div class="card calc">
-  <h2>간단 곱셈 계산기</h2>
+  <h2 style="font-size: 20px;">간단 곱셈 계산기</h2>
   <div class="calc-row">
     <input id="num1" type="number" placeholder="숫자 1 입력" />
     <span class="x-sign">×</span>
     <input id="num2" type="number" placeholder="숫자 2 입력" />
-    <button id="calc-btn" type="button">=</button>
+    <button id="calc-btn" type="button">계산</button>
   </div>
   <div id="calc-result">결과: —</div>
 </div>
-
 
 
 
