--- a/자기소개.html
+++ b/자기소개.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="page">
 <div class="box">
   <h1 class="main-title">james의 페이지에 오신걸 환영합니다!</h1>
   <h4>ddabcdefghijklmnopqrstuvwxyz</h4>
@@ -48,13 +49,13 @@
 
 
 <button class="btn">button</button>
-
+</div>
 </body>
 
 
 <script>
   $('.btn').on('click', function() {
-  alert()
+  alert("그냥 만든 버튼")
   })
 </script>
 
